aumentando espaço do permgen para ver se consegue compilar no cloudbees